@@ -28,7 +28,7 @@ Carp = 0
 HTTP::Tiny = 0.014
 JSON = 0
 Moo = 0
-namespace::sweep = 0
+namespace::autoclean = 0
 Scalar::Util = 0
 Try::Tiny = 0
 Types::Standard = 0
